--- a/group_ex/report.rmd
+++ b/group_ex/report.rmd
@@ -1,7 +1,7 @@
 ---
-title: "MFA"
-author: Group X
-date: Nov 11, 2023
+title: "Group Exercise"
+author: Group 7
+date: Nov 18, 2023
 output: 
     html_document:
         # latex_engine: xelatex
