--- a/group_ex/report.rmd
+++ b/group_ex/report.rmd
@@ -18,6 +18,7 @@ library(factoextra)
 library(FactoMineR)
 library(Factoshiny)
 library(httpgd)
+library(reshape2)
 ```
 
 # Data mining
@@ -251,3 +252,26 @@ We can clearly see that athelete positioned at the top of dimension 3 have bette
 ```
 
 As we can see, Duckworth and Ziemek outperform Cairoli and Bourrada on almost listed sports, except that Duckworth is worse than Bourrada in **Disque**. This is due to cos2 of **Disque** on dimension 2 and dimension 3 are similar (0.22 and 0.19) and athelete performance on this sport is positive correlated on both of 2 dimensions, which means athelete are on the right side of dimension 2 or on the top of dimension 3 tend to have higher performance on Disque. As we can see in individual plot, although Duckworth lies higher than Bourrada on dimension 3, he lies further to the left in dimension 2 than Bourrada. This can explain why Duckworth performance on Disque are not so different than that of Bourrada.
+
+## **o	Những người chiến thắng mười môn phối hợp xuất sắc trong những môn nào? Tồn tại trường hợp môn thi nào ít có ảnh hưởng đến thành tích (số điểm) trong mười môn phối hợp không? (MAYER, Eaton, Sebrle, Mayer, Clay, Warner, Abele)**
+
+```{r}
+plot(res.pca,
+     axes = c(1, 2),
+     choix = c("var"),
+     col.hab = "Points",
+     invisible = c("ind"),
+     select=NULL,
+     unselect=0.8
+     )
+```
+
+* Chúng ta thấy rằng trên đồ thị vòng tròn tương quan có biến bổ sung “Points” gần như thẳng hàng với dimension thứ nhất. Điều này có nghĩa là những người giành chiến thắng trong mười môn phối hợp đã thể hiện tốt trong các môn thể thao có tương quan cao với thành phần chính đầu tiên.
+
+```{r}
+res.pca$var$coord
+```
+
+* Ngoài ra, chúng ta thấy rằng các môn thể thao gắn liền với thành phần chính đầu tiên nhất (có giá trị coord gần 1 hoặc -1) gồm: Longueur, Disque, Poids, X100m, X400m, X110m.haies. Như vậy, những người chiến thắng mười môn phối hợp xuất sắc trong những môn có tương quan chặt chẽ với thành phần chính thứ nhất vừa được liệt kê.
+
+* Tương tự, các môn thể thao ít có ảnh hưởng đến thành tích (số điểm) sẽ có tương quan thấp đối với trục thứ nhất, gồm: Perche và X1500.
