--- a/assignment/report.rmd
+++ b/assignment/report.rmd
@@ -151,3 +151,104 @@ for (variable in variables) {
 * Null Hypothesis (H0): "There is no correlation between the ash content and the alcalinity of ash in wines."
 
 * Alternative Hypothesis (H1): "There is a positive correlation between the ash content and the alcalinity of ash in wines."
+
+# Code của Hà
+
+```{r, echo=FALSE, warning=FALSE}
+# Packages
+library(FactoMineR)
+library(factoextra)
+library(tidyverse)
+library(corrplot)
+library(dbplyr)
+library(ggplot2)
+
+# Import data
+data <- read.csv("wine.data", 
+                 header=FALSE, 
+                 row.names=NULL)
+
+# Setting up the data
+colnames(data) <- c("Type","Alcohol", "Malic", "Ash", "Alcalinity", "Magnesium", "Phenols", "Flavanoids", "Nonflavanoids", "Proan", "Color", "Hue", "Dilution", "Proline")
+
+data$Type <- as.factor(data$Type)
+
+# Check for null values 
+colSums(is.na(data))
+
+# Research Hypotheses
+# research_hypotheses <- c("Hypothesis 1: ...", "Hypothesis 2: ...")
+
+# Statistical Hypotheses (example for t-test)
+# Assuming 'variable1' and 'variable2' are the variables of interest
+#statistical_hypotheses <- t.test(data$variable1, data$variable2)
+
+# Multivariate Analysis Considerations
+# Assuming 'data' is your dataset
+correlation_matrix <- cor(data[-1])
+corrplot(correlation_matrix)
+# Calculate correlation matrix
+
+# Principal Component Analysis (PCA)
+res.pca <- PCA(data, scale.unit=T, quali.sup="Type", graph=F)
+
+# Multiple Correspondence Analysis (MCA)
+#mca_result <- MCA(data)
+
+# Eigenvalues
+res.pca$eig
+
+# Contribution
+dimdesc(res.pca)
+
+# Cos2
+library("corrplot")
+corrplot(res.pca$var$cos2, is.corr=F)
+
+# Individuals
+plot(res.pca,
+     choix = "ind",
+     hab = "Type",
+     invisible = c("var"),
+     select = "cos2 0.6",
+     unselect = 0.7)
+
+# Variables
+plot(res.pca,
+     choix = c("var"),
+     hab = "none",
+     invisible = c("ind"),
+     select = NULL,
+     unselect = 0.7)
+
+# Correspondence Analysis
+res.ca <- CA(data, quali.sup="Type", graph=F)
+
+plot(res.ca, 
+     invisible="col",
+     selectRow = "cos2 100",
+     unselect = 1
+     )
+
+plot(res.ca, 
+     invisible="row",
+     selectCol = NULL,
+     unselect = 1
+     )
+
+# Thử Multiple Factor Analysis (MFA)
+gr1 = data[1]
+gr2 = data.frame(data[7:10], data[13])
+gr3 = data.frame(data[2], data[11])
+gr4 = data.frame(data[12], data[14])
+gr5 = data[6]
+gr6 = data[3]
+data.cat = data.frame(gr1, gr2, gr3, gr4, gr5, gr6)
+
+res.mfa <- MFA(data.cat,
+               group = c(1, 5, 2, 2, 1, 1),
+               type = c("n", rep("c",5)),
+               name.group = c("Group1", "Group2", "Group3", "Group4", "Group5","Group6"),
+               num.group.sup = c(1),
+               graph = F)
+```
